Fix Invisible Link Color

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -16,13 +16,14 @@ p.small {
     font-size: 16px;
 }
 
+/*! custom link color */
 a,
 a:hover,
 a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #{{ site.color.primary }};
+    color: #{{ site.color.primary-light }};
 }
 
 h1,
